# GuildInfoBotTool

./: .gitignore  DOCKERFILE  GuildInfoBotTool.service  OauthServer.service  compose.yaml  docker-compose.yaml  example.env  example.ini  local_packages.txt  main.py  pyproject.toml  readme.md  requirements.txt  server.py  setup guide.MD  setup guide.txt  table.sql
.github/workflows/: ci.yml  codeql.yml
cogs/: __init__.py  commands.py  jsk.py
server/:  server.py  server.py  server_rewrite.py
utils/: __init__.py  bot.py  extra.py  server.py  views.py  zmq_utils.py
web/:  server.py
