[tool.poetry]
name = "GuildInfoBotTool"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["JDJG <jdjgbot@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"
discord-py = {extras = ["speed"]}
jishaku = {git = "https://github.com/Gorialis/jishaku.git"}
asqlite = {git = "https://github.com/Rapptz/asqlite/"}
python-dotenv
fastapi = {extras = ["all"]}
uvicorn
pyzmq


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"